update CLAUDE.md with execution instructions for demo and benchmark programs