@@ -1,30 +1,128 @@
 package indexeddataframe
 
-/**
-  * Created by alexuta on 06/07/17.
-  */
-
 import indexeddataframe.execution.IndexedOperatorExec
-import org.apache.spark.sql.{DataFrame, Dataset, SparkSession}
+import org.apache.spark.sql.{DataFrame, SparkSession}
 import indexeddataframe.implicits._
 import indexeddataframe.logical.ConvertToIndexedOperators
 import org.apache.spark.sql.types._
 
+/**
+  * IndexedDFのデモプログラム
+  * 実行: sbt "runMain indexeddataframe.Example"
+  */
+object Example {
+
+  def main(args: Array[String]): Unit = {
+    val sparkSession = SparkSession.builder
+      .master("local[*]")
+      .appName("IndexedDF Example")
+      .config("spark.sql.shuffle.partitions", "4")
+      .config("spark.sql.adaptive.enabled", "false")
+      .getOrCreate()
+
+    import sparkSession.implicits._
+
+    // 戦略と最適化ルールを登録
+    sparkSession.experimental.extraStrategies ++= Seq(IndexedOperators)
+    sparkSession.experimental.extraOptimizations ++= Seq(ConvertToIndexedOperators)
+
+    println("=== IndexedDF Demo ===\n")
+
+    // サンプルデータ作成
+    val edges = (1 to 10000).map(i => (i.toLong, (i * 7 % 1000).toLong, s"edge_$i"))
+    val edgesDF = edges.toDF("src", "dst", "label").cache()
+    edgesDF.count() // trigger cache
+
+    val nodes = (1 to 1000).map(i => (i.toLong, s"node_$i"))
+    val nodesDF = nodes.toDF("id", "name").cache()
+    nodesDF.count() // trigger cache
+
+    println(s"Edges: ${edgesDF.count()} rows")
+    println(s"Nodes: ${nodesDF.count()} rows\n")
+
+    // 1. インデックス作成
+    println("--- 1. Create Index ---")
+    val t1 = System.nanoTime()
+    val indexedDF = edgesDF.createIndex(0).cache()
+    // trigger execution
+    indexedDF.queryExecution.executedPlan.asInstanceOf[IndexedOperatorExec].executeIndexed().count()
+    val t2 = System.nanoTime()
+    println(s"Index creation: ${(t2 - t1) / 1000000.0} ms\n")
+
+    // 2. キールックアップ
+    println("--- 2. Key Lookup (getRows) ---")
+    val lookupKey = 100L
+    val t3 = System.nanoTime()
+    val result = indexedDF.getRows(lookupKey)
+    val rows = result.collect()
+    val t4 = System.nanoTime()
+    println(s"Lookup key=$lookupKey: found ${rows.length} rows in ${(t4 - t3) / 1000000.0} ms")
+    rows.foreach(r => println(s"  $r"))
+    println()
+
+    // 3. フィルタ (インデックス活用)
+    println("--- 3. Indexed Filter ---")
+    indexedDF.createOrReplaceTempView("indexed_edges")
+    val filterResult = sparkSession.sql("SELECT * FROM indexed_edges WHERE src = 500")
+    filterResult.explain(true)
+    println(s"Filter result: ${filterResult.count()} rows\n")
+
+    // 4. Join (インデックス活用)
+    println("--- 4. Indexed Join ---")
+    nodesDF.createOrReplaceTempView("nodes")
+    val joinResult = sparkSession.sql(
+      """SELECT e.src, e.dst, e.label, n.name
+        |FROM indexed_edges e
+        |JOIN nodes n ON e.src = n.id
+        |""".stripMargin)
+    joinResult.explain(true)
+
+    val t5 = System.nanoTime()
+    val joinCount = joinResult.count()
+    val t6 = System.nanoTime()
+    println(s"Join result: $joinCount rows in ${(t6 - t5) / 1000000.0} ms")
+    joinResult.show(10)
+
+    // 5. 行追加 (Copy-on-Write)
+    println("--- 5. Append Rows (Copy-on-Write) ---")
+    val newEdges = Seq((9999L, 1L, "new_edge")).toDF("src", "dst", "label")
+    val updatedDF = indexedDF.appendRows(newEdges)
+
+    val originalCount = indexedDF.getRows(9999L).count()
+    val updatedCount = updatedDF.getRows(9999L).count()
+    println(s"Original DF rows with src=9999: $originalCount")
+    println(s"Updated DF rows with src=9999: $updatedCount")
+    println("(Copy-on-Write: original DF is unchanged)\n")
+
+    println("=== Demo Complete ===")
+    sparkSession.stop()
+  }
+}
+
+/**
+  * ベンチマークプログラム
+  *
+  * 外部CSVファイルを使用する場合:
+  *   sbt "runMain indexeddataframe.BenchmarkPrograms <delimiter1> <path1> <delimiter2> <path2> <partitions> <master>"
+  *
+  * インメモリデータでデモ実行する場合:
+  *   sbt "runMain indexeddataframe.BenchmarkPrograms"
+  */
 object BenchmarkPrograms {
 
-  val nTimesRun = 200
+  val nTimesRun = 10
 
-  def triggerExecutionDF(df: DataFrame) = {
+  def triggerExecutionDF(df: DataFrame): Unit = {
     val plan = df.queryExecution.executedPlan.execute()
     plan.foreachPartition(p => println("partition size = " + p.length))
   }
 
-  def triggerExecutionDF2(df: DataFrame) = {
+  def triggerExecutionDF2(df: DataFrame): Unit = {
     val plan = df.queryExecution.executedPlan.execute()
     plan.foreachPartition(p => println("final part size = " + p.length))
   }
 
-  def triggerExecutionIndexedDF(df: DataFrame) = {
+  def triggerExecutionIndexedDF(df: DataFrame): Unit = {
     val plan = df.queryExecution.executedPlan.asInstanceOf[IndexedOperatorExec].executeIndexed()
     plan.foreachPartition(p => println("indexed part size = " + p.length))
   }
@@ -38,175 +136,130 @@ object BenchmarkPrograms {
     indexed
   }
 
-  def runJoin(indexedDF: DataFrame, nodesDF: DataFrame, sparkSession: SparkSession) = {
+  def runJoin(indexedDF: DataFrame, nodesDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
     nodesDF.createOrReplaceTempView("vertices")
 
-    var res = sparkSession.sql("SELECT * " +
+    val res = sparkSession.sql("SELECT * " +
       "FROM edges " +
       "JOIN vertices " +
       "ON edges.src = vertices.id")
 
     res.explain(true)
 
-    // run the join a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF2(res)
-      //res.count()
-
       val t2 = System.nanoTime()
       println("join iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-    //println("resulting DF size = " + res.count())
-    println("join on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("join on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runScan(indexedDF: DataFrame, sparkSession: SparkSession) = {
-
+  def runScan(indexedDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
 
     val res = sparkSession.sql("SELECT * FROM edges")
 
-    // run the scan a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF(res)
-
       val t2 = System.nanoTime()
       println("scan iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-
-    println("scan on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("scan on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runFilter(indexedDF: DataFrame, sparkSession: SparkSession) = {
-
+  def runFilter(indexedDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
 
-    val res = sparkSession.sql("SELECT * FROM edges where edges.src > 100000000")
+    val res = sparkSession.sql("SELECT * FROM edges where edges.src > 5000")
     res.explain(true)
 
-    // run the scan a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF(res)
-
       val t2 = System.nanoTime()
       println("filter iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-
-    println("filter on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("filter on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runEqFilter(indexedDF: DataFrame, sparkSession: SparkSession) = {
-
+  def runEqFilter(indexedDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
 
-    val res = sparkSession.sql("SELECT * FROM edges where edges.src = 100000000")
+    val res = sparkSession.sql("SELECT * FROM edges where edges.src = 5000")
     res.explain(true)
 
-    // run the scan a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF(res)
-
       val t2 = System.nanoTime()
       println("filter iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-
-    println("equality filter on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("equality filter on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runAgg(indexedDF: DataFrame, sparkSession: SparkSession) = {
-
+  def runAgg(indexedDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
 
     val res = sparkSession.sql("SELECT sum(src) FROM edges")
 
-    // run the scan a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF(res)
-
       val t2 = System.nanoTime()
       println("agg iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-
-    println("agg on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("agg on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runProj(indexedDF: DataFrame, sparkSession: SparkSession) = {
-
+  def runProj(indexedDF: DataFrame, sparkSession: SparkSession): Unit = {
     indexedDF.createOrReplaceTempView("edges")
 
     val res = sparkSession.sql("SELECT dst FROM edges")
 
-    // run the scan a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       triggerExecutionDF(res)
-
       val t2 = System.nanoTime()
       println("proj iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
-
-    println("proj on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("proj on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def runAppend(indexedDF: DataFrame, appendDF:DataFrame, sparkSession: SparkSession) = {
+  def runAppend(indexedDF: DataFrame, appendDF: DataFrame, sparkSession: SparkSession): Unit = {
     var indexedDFRes = indexedDF.appendRows(appendDF).cache()
-    // run the operation a few times and compute the average
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
-
       indexedDFRes = indexedDFRes.appendRows(appendDF)
-      //triggerExecutionDF(indexedDFRes)
-
       val t2 = System.nanoTime()
       println("append iteration %d took %f".format(i, (t2 - t1) / 1000000.0))
-
       if (i > 1) totalTime += (t2 - t1)
     }
     val t1 = System.nanoTime()
     val nRows = indexedDFRes.count()
     val t2 = System.nanoTime()
     println("resulting DF size = " + nRows)
-    //totalTime = t2 - t1
-    println("append on Indexed DataFrame took %f ms".format((totalTime / ((1) * 1000000.0))))
-    //indexedDFRes.explain(true)
+    println("append on Indexed DataFrame took %f ms".format(totalTime / 1000000.0))
   }
 
-  def runJoinAppend(indexedDF: DataFrame, nodesDF: DataFrame, appendDF:DataFrame, sparkSession: SparkSession) = {
-
+  def runJoinAppend(indexedDF: DataFrame, nodesDF: DataFrame, appendDF: DataFrame, sparkSession: SparkSession): Unit = {
     var indexedDFRes = indexedDF.appendRows(appendDF).cache()
-    var res:DataFrame = null
-    // run the join a few times and compute the average
+    var res: DataFrame = null
     var totalTime = 0.0
     for (i <- 1 to nTimesRun) {
       val t1 = System.nanoTime()
@@ -220,7 +273,6 @@ object BenchmarkPrograms {
         "ON edges.src = vertices.id")
       triggerExecutionDF(res)
 
-      // once in every 5 experiments, append some rows
       if (i % 5 == 0) indexedDFRes = indexedDFRes.appendRows(appendDF).cache()
 
       val t2 = System.nanoTime()
@@ -229,56 +281,37 @@ object BenchmarkPrograms {
       if (i > 1) totalTime += (t2 - t1)
     }
     println("resulting DF size = " + res.count())
-    println("joinAppend on Indexed DataFrame took %f ms".format((totalTime / ((nTimesRun - 1) * 1000000.0))))
+    println("joinAppend on Indexed DataFrame took %f ms".format(totalTime / ((nTimesRun - 1) * 1000000.0)))
   }
 
-  def getSizeInBytes(df: DataFrame) = {
+  def getSizeInBytes(df: DataFrame): Unit = {
     //df.queryExecution.optimizedPlan.statistics.sizeInBytes
   }
 
   def main(args: Array[String]): Unit = {
-
-    var delimiter1 = ""
-    var delimiter2 = ""
-    var path1 = ""
-    var path2 = ""
-    var partitions = ""
-    var master = ""
-
-
+    // 引数がない場合はインメモリデータでデモ実行
     if (args.length < 6) {
-      println("your args were: ")
-      args.foreach( arg => print(arg + " "))
-      println()
-      println("not enough arguments!")
-      println("please provide the delimiters of the csv files, the paths, and the number of partitions")
-      System.exit(0)
-    } else {
-      delimiter1 = args(0)
-      path1 = args(1)
-      delimiter2 = args(2)
-      path2 = args(3)
-      partitions = args(4)
-      master = args(5)
+      runWithSampleData()
+      return
     }
 
-    val sparkSession = SparkSession.builder.
-      master(master)
-      .appName("spark test app")
-      .config("spark.driver.maxResultSize", "40g")
-      // use the concurrent mark sweep GC as it achieves better performance than the others (according
-      // to our experiments)
-      .config("spark.executor.extraJavaOptions", "-javaagent:/home/aua400/updatableGraphs/IndexedDF/lib/jamm-0.3.4-SNAPSHOT.jar -XX:+UseConcMarkSweepGC -XX:+UseParNewGC")
+    // 外部CSVファイルを使用
+    val delimiter1 = args(0)
+    val path1 = args(1)
+    val delimiter2 = args(2)
+    val path2 = args(3)
+    val partitions = args(4)
+    val master = args(5)
+
+    val sparkSession = SparkSession.builder
+      .master(master)
+      .appName("IndexedDF Benchmark")
       .config("spark.sql.shuffle.partitions", partitions)
-      // increase the delay scheduling wait so as to achieve higher chances of locality
+      .config("spark.sql.adaptive.enabled", "false")
       .config("spark.locality.wait", "200")
-      // use this, as otherwise, the join can be scheduled with locality for the "right" relation, which is not desirable
-      // as we would have to move the indexed data, which is slow
       .config("spark.shuffle.reduceLocality.enabled", "false")
       .config("spark.sql.inMemoryColumnarStorage.compressed", "false")
       .getOrCreate()
-
-    sparkSession.sparkContext.addJar("/home/aua400/updatableGraphs/IndexedDF/lib/jamm-0.3.4-SNAPSHOT.jar")
 
     import sparkSession.implicits._
 
@@ -286,87 +319,116 @@ object BenchmarkPrograms {
     sparkSession.experimental.extraOptimizations ++= Seq(ConvertToIndexedOperators)
 
     val edgeSchema = StructType(Array(
-      StructField("src", LongType, false),
-      StructField("dst", LongType, false),
-      StructField("cost", FloatType, true)))
+      StructField("src", LongType, nullable = false),
+      StructField("dst", LongType, nullable = false),
+      StructField("cost", FloatType, nullable = true)))
     val nodeSchema = StructType(Array(
-      StructField("id", LongType, false),
-      StructField("firstName", StringType, true),
-      StructField("lastName", StringType, true),
-      StructField("gender", StringType, true),
-      StructField("birthday", DateType, true),
-      StructField("creationDate", StringType, true),
-      StructField("locationIP", StringType, true),
-      StructField("browserUsed", StringType, true)))
+      StructField("id", LongType, nullable = false),
+      StructField("firstName", StringType, nullable = true),
+      StructField("lastName", StringType, nullable = true),
+      StructField("gender", StringType, nullable = true),
+      StructField("birthday", DateType, nullable = true),
+      StructField("creationDate", StringType, nullable = true),
+      StructField("locationIP", StringType, nullable = true),
+      StructField("browserUsed", StringType, nullable = true)))
 
-    // load edges for a graph
     var edgesDF = sparkSession.read
-      .format("com.databricks.spark.csv")
       .option("header", "true")
       .option("delimiter", delimiter1)
       .schema(edgeSchema)
-      .load(path1)
-    
-    // load edges for appending
-    var appendDF = sparkSession.read
-      .format("com.databricks.spark.csv")
-      .option("header", "true")
-      .option("delimiter", delimiter1)
-      .schema(edgeSchema)
-      .load("/var/scratch/aua400/datagen-edges-1M.csv")
+      .csv(path1)
 
-    // load vertices for a graph
     var nodesDF = sparkSession.read
-      .format("com.databricks.spark.csv")
       .option("header", "true")
       .option("delimiter", delimiter2)
       .schema(nodeSchema)
-      .load(path2)
+      .csv(path2)
 
-    // cache the nodes and trigger the execution
     nodesDF = nodesDF.cache()
     edgesDF = edgesDF.cache()
-    //appendDF = appendDF.cache()
     triggerExecutionDF(nodesDF)
     triggerExecutionDF(edgesDF)
-    //triggerExecutionDF(appendDF)
 
-    //println("cached non-indexed = " + getSizeInBytes(edgesDF) / (1024 * 1024))
-    //return 
-
-    // create the Index and cache the indexed DF
     val indexedDF = createIndexAndCache(edgesDF)
-    //val indexedDF = edgesDF
 
-    // run a join between the edges of the graph and its nodes
     runJoin(indexedDF, nodesDF, sparkSession)
-
-    // run append
-    //runAppend(indexedDF, appendDF, sparkSession)
 
     indexedDF.show(10)
 
-
-    return
-
-    //run a scan of an indexed dataframe
     runScan(indexedDF, sparkSession)
-
-    // run a filter on an indexed dataframe
     runFilter(indexedDF, sparkSession)
-
-    // run an equality filter on an indexed dataframe
     runEqFilter(indexedDF, sparkSession)
-    
-    // run an aggregate on an indexed dataframe
     runAgg(indexedDF, sparkSession)
-
-    // run a projection on an indexed dataframe
     runProj(indexedDF, sparkSession)
 
     sparkSession.close()
     sparkSession.stop()
   }
+
+  /**
+    * インメモリデータでベンチマーク実行（外部ファイル不要）
+    */
+  def runWithSampleData(): Unit = {
+    println("Running with in-memory sample data...")
+    println()
+
+    val sparkSession = SparkSession.builder
+      .master("local[*]")
+      .appName("IndexedDF Benchmark (Sample Data)")
+      .config("spark.sql.shuffle.partitions", "4")
+      .config("spark.sql.adaptive.enabled", "false")
+      .getOrCreate()
+
+    import sparkSession.implicits._
+
+    sparkSession.experimental.extraStrategies ++= Seq(IndexedOperators)
+    sparkSession.experimental.extraOptimizations ++= Seq(ConvertToIndexedOperators)
+
+    // サンプルデータ作成
+    val edges = (1 to 10000).map(i => (i.toLong, (i * 7 % 1000).toLong, 1.0f))
+    var edgesDF = edges.toDF("src", "dst", "cost").cache()
+
+    val nodes = (1 to 1000).map(i => (i.toLong, s"name_$i"))
+    var nodesDF = nodes.toDF("id", "name").cache()
+
+    val appendData = (10001 to 10100).map(i => (i.toLong, (i % 100).toLong, 2.0f))
+    val appendDF = appendData.toDF("src", "dst", "cost")
+
+    triggerExecutionDF(nodesDF)
+    triggerExecutionDF(edgesDF)
+
+    println(s"Edges: ${edgesDF.count()} rows")
+    println(s"Nodes: ${nodesDF.count()} rows")
+    println()
+
+    val indexedDF = createIndexAndCache(edgesDF)
+
+    println("\n=== Running benchmarks ===\n")
+
+    runScan(indexedDF, sparkSession)
+    println()
+
+    runFilter(indexedDF, sparkSession)
+    println()
+
+    runEqFilter(indexedDF, sparkSession)
+    println()
+
+    runAgg(indexedDF, sparkSession)
+    println()
+
+    runProj(indexedDF, sparkSession)
+    println()
+
+    runJoin(indexedDF, nodesDF, sparkSession)
+    println()
+
+    runAppend(indexedDF, appendDF, sparkSession)
+    println()
+
+    indexedDF.show(10)
+
+    sparkSession.close()
+    sparkSession.stop()
+  }
 }
-
-
